Revert "style: fix DuckDuckGo dark theme is unreadable #24"
This reverts commit bab916c27b9c78389b6b9e55baf6518339bd15f4.

--- a/src/components/logseq.module.scss
+++ b/src/components/logseq.module.scss
@@ -3,18 +3,13 @@
 }
 
 .blockContent {
-  @apply flex flex-col  prose-sm dark:prose-invert prose-p:text-gray-800 dark:prose-p:text-gray-200 whitespace-pre-wrap text-sm prose-img:w-full prose-p:my-0 prose-img:my-1;
+  @apply flex flex-col  prose-sm dark:prose-invert whitespace-pre-wrap text-sm prose-img:w-full prose-p:my-0 prose-img:my-1;
   * {
-    @apply break-all text-sm text-gray-800 dark:text-gray-200;
-
-    mark {
-      @apply bg-yellow-200 dark:bg-yellow-800;
-    }
+    @apply break-all text-sm;
   }
 
   a {
-    @apply no-underline hover:underline text-[#1a0dab] dark:text-[#8ab4f8];
-    // color: #8ab4f8;
+    @apply no-underline hover:underline;
   }
 
   img {
@@ -24,15 +19,10 @@
   pre {
     @apply overflow-x-auto whitespace-pre-wrap;
   }
-
-  table {
-    @apply text-gray-800 dark:text-gray-200;
-  }
-
 }
 
 .pageContent {
-  @apply flex flex-col gap-2 prose-sm prose-p:text-black dark:prose-p:text-white  dark:prose-invert whitespace-pre-wrap text-sm;
+  @apply flex flex-col gap-2 prose-sm  dark:prose-invert whitespace-pre-wrap text-sm;
 }
 
 .pageContentFooter {
@@ -40,15 +30,11 @@
 }
 
 .copilotCardHeader {
-  @apply flex flex-row justify-between items-center text-sm pb-2 text-gray-800 dark:text-gray-200;
+  @apply flex flex-row justify-between items-center text-sm pb-2;
 
   a {
     @apply text-sm text-center object-center;
   }
-
-  // span, svg {
-  //   @apply text-gray-800 dark:text-gray-200;
-  // }
 }
 
 .divide {
@@ -60,9 +46,9 @@
 }
 
 .toBlock {
-  @apply no-underline hover:underline text-[#1a0dab] dark:text-[#8ab4f8];
+  @apply no-underline hover:underline;
 }
 
 .logseqPageLink {
-  @apply no-underline hover:underline text-[#1a0dab] dark:text-[#8ab4f8];
+  @apply no-underline hover:underline;
 }
